# halo

./: Cargo.toml  README.md
crates/halo/: Cargo.toml
crates/halo/src/: config.rs  default_config.toml  events.rs  lib.rs  main.rs
crates/halo/src/gui/: app.rs  window.rs
crates/halo/src/gui/menu/: mod.rs  model.rs  view.rs
crates/halo/src/sys/: mod.rs  runtime.rs  server.rs
crates/hypraise/: Cargo.toml
crates/hypraise/src/: desktop.rs  icon.rs  lib.rs  macros.rs  main.rs  wm.rs
src/: events.rs  main.rs
src/gui/: app.rs  menu.rs  mod.rs  theme.rs  ui.rs  window.rs
src/gui/menu/: mod.rs  model.rs  view.rs
src/sys/: desktop.rs  wm.rs
