[package]
name = "halo"
version = "0.1.1"
edition = "2024"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
directories = "6.0"
hyprland = "0.4.0-beta.1"
freedesktop_entry_parser = "2.0.1"
gtk4 = "0.10"
gdk4 = "0.10"
glib = "0.21"
async-channel = "2.3"
gtk4-layer-shell = "0.7"
relm4 = { version = "0.10", features = ["macros"] }
cairo-rs = { version = "0.21", features = ["png"] }
gdk-pixbuf = "0.21"

thiserror = "2.0.17"
palette = "0.7.6"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
derive_more = { version = "2.1.1", features = ["display", "deref", "from", "into", "as_ref"] }
strum = { version = "0.27.2", features = ["derive"] }
shell-words = "1.1.1"
freedesktop-icons = "0.4.0"
config = { version = "0.15.19", features = ["toml"] }
serde_with = "3.16.1"
xdg = "3.0.0"
fs-err = "3.2.2"
parking_lot = "0.12.5"
notify = "8.2.0"
tokio = { version = "1.49.0", features = ["full"] }

[dev-dependencies]
serde_json = "1.0.149"
