[package]
name = "hypraise"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
thiserror = "2.0.17"
freedesktop_entry_parser = "2.0.1"
freedesktop-icons = "0.4.0"
hyprland = "0.4.0-beta.1"
shell-words = "1.1.1"
directories = "6.0"
serde = { version = "1.0.228", features = ["derive"] }
derive_more = { version = "2.1.1", features = ["display", "deref", "from", "into", "as_ref"] }
fs-err = "3.2.2"
parking_lot = "0.12.5"
xdg = "3.0.0"
